2003-03-19  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Disable libcroco support until libcroco implements
	the 1 remaining fn that I need from it
	* rsvg-styles.c (rsvg_parse_style_attrs): Handle tag#id, tag.klazz#id, 
	and tag.klazz much more properly
	
2003-03-18  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Updates for optional libcroco support
	* Makefile.am: ditto
	* librsvg-2.0.pc.in: ditto
	* rsvg-styles.c: ditto

2003-03-18  Dom Lachowicz <cinamod@hotmail.com> / Ross Alexander <ross.alexander@uk.neceur.com>

	* configure.in: Bump version # to 2.3.0
	* rsvg-shapes.h: Add RsvgDefsPath type, start_use()
	* rsvg-shapes.c: Work needed to handle def paths, start_use()
	* rsvg-defs.h: Add new defs type for paths
	* rsvg.c: Handle use, defs paths
	
== gnome-2-2 branch, 2.2.5 released ==
	
2003-03-18  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bump version # to 2.2.5

2003-03-17  Dom Lachowicz <cinamod@hotmail.com>

	* Makefile.am: additions for GIMP support
	* configure.in: ditto
	* gimp-plugin/Makefile.am: ditto
	* gimp-plugin/svg.c: ditto
	* NEWS: update to mention GIMP plugin
	
2003-03-14  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-path.c (rsvg_path_arc): Fix NaN issue, bug 108380
	* rsvg-shapes.c (start_rect): SVG conformance issues fixed
	
=== librsvg 2.2.4 ===
	
2003-03-10  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bump version number
	
2003-02-26  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c (close_impl): Fix bug 106399
	
2003-02-03  Dom Lachowicz <cinamod@hotmail.com>

	* gdk-pixbuf-loader/io-svg.c (*): Updates for GTK 2.2.1
	
2003-02-02  Dom Lachowicz <cinamod@hotmail.com>

	* tests/butterfly.svg
	* tests/chem1.svg: New tests, from the mozilla project
	
2003-02-02  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c (rect): Handle missing RX when RY is specified (http://www.w3.org/TR/SVG11/shapes.html#RectElement)

	* configure.in: Bump version number, libgsf update from aldug
